--- a/registo_form.php.html
+++ b/registo_form.php.html
@@ -20,6 +20,21 @@
       </div>
     </div>
   </nav>
+  <div class="row">
+    <div class="col-md-12">
+      <h1 class="display-1 text-center text-muted">Registo de Clientes<br></h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <h3 class="" contenteditable="true">Dados Pessoais<br></h3>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-6">
+      <h5>Nome</h5> <input id="name" autofocus="" name="name" placeholder="Escreva o seu nome" type="text"> </div>
+    <div class="col-md-6"></div>
+  </div>
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
   <script src="https://pingendo.com/assets/bootstrap/bootstrap-4.0.0-alpha.6.min.js"></script>
