--- a/registo_form.php.html
+++ b/registo_form.php.html
@@ -33,7 +33,12 @@
   <div class="row">
     <div class="col-md-6">
       <h5>Nome</h5> <input id="name" autofocus="" name="name" placeholder="Escreva o seu nome" type="text"> </div>
-    <div class="col-md-6"></div>
+    <div class="col-md-6">
+      <h5>Sexo</h5> <select name="gender" class="selectpicker" title="Indique o seu Género...">
+           <option value="Masculino">Masculino</option>
+           <option value="Feminino">Feminino</option>
+           <option value="Outro">Outro</option>
+      </select> </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
