--- a/registo_form.php.html
+++ b/registo_form.php.html
@@ -42,6 +42,7 @@
   </div>
   <div class="row">
     <div class="col-md-6"></div>
+    <h5>Data de Nascimento</h5>
     <div class="col-md-6"></div>
   </div>
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
