--- a/registo_form.php.html
+++ b/registo_form.php.html
@@ -41,9 +41,11 @@
       </select> </div>
   </div>
   <div class="row">
-    <div class="col-md-6"></div>
-    <h5>Data de Nascimento</h5>
-    <div class="col-md-6"></div>
+    <div class="col-md-6">
+      <h5>Data de Nascimento</h5>
+    </div>
+    <div class="col-md-6">
+      <h5>Data de Nascimento</h5> <input name="photo_to_upload" id="photo_to_upload" type="file"> </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
