--- a/registo_form.php.html
+++ b/registo_form.php.html
@@ -47,6 +47,15 @@
     <div class="col-md-6">
       <h5>Data de Nascimento</h5> <input name="photo_to_upload" id="photo_to_upload" type="file"> </div>
   </div>
+  <div class="row">
+    <div class="col-md-12">
+      <h3 class="" contenteditable="true">Cartão do Cidadão e NIF<br></h3>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-6"></div>
+    <div class="col-md-6"></div>
+  </div>
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
   <script src="https://pingendo.com/assets/bootstrap/bootstrap-4.0.0-alpha.6.min.js"></script>
