--- a/registo_form.php.html
+++ b/registo_form.php.html
@@ -53,7 +53,8 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-6"></div>
+    <div class="col-md-6">
+      <h5>Cartão do Cidadão</h5> <input id="name" autofocus="" name="name" placeholder="introduza o Nº" type="text"> </div>
     <div class="col-md-6"></div>
   </div>
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
