Commit from Pingendo

--- a/registo_form.php.html
+++ b/registo_form.php.html
@@ -55,7 +55,8 @@
   <div class="row">
     <div class="col-md-6">
       <h5>Cartão do Cidadão</h5> <input id="name" autofocus="" name="name" placeholder="introduza o Nº" type="text"> </div>
-    <div class="col-md-6"></div>
+    <div class="col-md-6">
+      <h5>NIF</h5> <input id="name" autofocus="" name="name" placeholder="introduza o seu NIF" type="text"> </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
