--- a/registo_form.php.html
+++ b/registo_form.php.html
@@ -58,6 +58,11 @@
     <div class="col-md-6">
       <h5>NIF</h5> <input id="name" autofocus="" name="name" placeholder="introduza o seu NIF" type="text"> </div>
   </div>
+  <div class="row">
+    <div class="col-md-12">
+      <h3 class="" contenteditable="true">Contactos<br></h3>
+    </div>
+  </div>
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
   <script src="https://pingendo.com/assets/bootstrap/bootstrap-4.0.0-alpha.6.min.js"></script>
