--- a/registo_form.php.html
+++ b/registo_form.php.html
@@ -31,20 +31,20 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-6 my-5">
       <h5>Nome</h5> <input id="name" autofocus="" name="name" placeholder="Escreva o seu nome" type="text"> </div>
     <div class="col-md-6">
-      <h5>Sexo</h5> <select name="gender" class="selectpicker" title="Indique o seu Género...">
+      <h5 class="py-5">Sexo</h5> <select name="gender" class="selectpicker" title="Indique o seu Género...">
            <option value="Masculino">Masculino</option>
            <option value="Feminino">Feminino</option>
            <option value="Outro">Outro</option>
       </select> </div>
   </div>
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-6 py-5">
       <h5>Data de Nascimento</h5>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-6 py-5">
       <h5>Data de Nascimento</h5> <input name="photo_to_upload" id="photo_to_upload" type="file"> </div>
   </div>
   <div class="row">
