--- a/registo_form.php.html
+++ b/registo_form.php.html
@@ -33,8 +33,7 @@
   <div class="row">
     <div class="col-md-6 my-5">
       <h5>Nome</h5> <input id="name" autofocus="" name="name" placeholder="Escreva o seu nome" type="text"> </div>
-    <div class="col-md-6">
-      <h5 class="py-5">Sexo</h5> <select name="gender" class="selectpicker" title="Indique o seu Género...">
+    <div class="col-md-6 py-5"> <select name="gender" class="selectpicker" title="Indique o seu Género...">
            <option value="Masculino">Masculino</option>
            <option value="Feminino">Feminino</option>
            <option value="Outro">Outro</option>
@@ -53,9 +52,9 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-6 my-5">
       <h5>Cartão do Cidadão</h5> <input id="name" autofocus="" name="name" placeholder="introduza o Nº" type="text"> </div>
-    <div class="col-md-6">
+    <div class="col-md-6 py-5">
       <h5>NIF</h5> <input id="name" autofocus="" name="name" placeholder="introduza o seu NIF" type="text"> </div>
   </div>
   <div class="row">
