--- a/registo_form.php.html
+++ b/registo_form.php.html
@@ -63,10 +63,17 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-6 py-5">
       <h5>Telemóvel</h5> <input id="telemovel" autofocus="" name="telemovel" placeholder="Introduza o seu nº de telemóvel..." min="100000000" max="999999999" type="number"> </div>
-    <div class="col-md-6">
+    <div class="col-md-6 py-5">
       <h5>Telefone</h5> <input id="telefone" autofocus="" name="telefone" placeholder="Introduza um nº de telefone..." min="100000000" max="999999999" type="number"> </div>
+  </div>
+  <div class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12"></div>
+      </div>
+    </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
