--- a/registo_form.php.html
+++ b/registo_form.php.html
@@ -73,11 +73,9 @@
       <h5>Email</h5> <input id="email" autofocus="" name="email" placeholder="Escreva o seu endereço de email..." type="email"> </div>
     <div class="col-md-6"></div>
   </div>
-  <div class="py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12"></div>
-      </div>
+  <div class="row">
+    <div class="col-md-12">
+      <h3 class="" contenteditable="true">Nome de Utilizador e Palavra-Passe<br></h3>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
