--- a/registo_form.php.html
+++ b/registo_form.php.html
@@ -73,10 +73,14 @@
       <h5>Email</h5> <input id="email" autofocus="" name="email" placeholder="Escreva o seu endereço de email..." type="email"> </div>
     <div class="col-md-6"></div>
   </div>
+  <div class="row"> </div>
+  <div class="col-md-12">
+    <h3 class="py-5" contenteditable="true">Palavra-Passe<br></h3>
+  </div>
   <div class="row">
-    <div class="col-md-12">
-      <h3 class="" contenteditable="true">Nome de Utilizador e Palavra-Passe<br></h3>
-    </div>
+    <div class="col-md-6">
+      <h5>Palavra-passe</h5> <input id="password" autofocus="" name="password" placeholder="Introduza a sua palavra-passe..." type="password"> </div>
+    <div class="col-md-6"></div>
   </div>
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
