Commit from Pingendo

--- a/registo_form.php.html
+++ b/registo_form.php.html
@@ -82,6 +82,10 @@
       <h5>Palavra-passe</h5> <input id="password" autofocus="" name="password" placeholder="Introduza a sua palavra-passe..." type="password"> </div>
     <div class="col-md-6"></div>
   </div>
+  <div class="row">
+    <div class="col-md-12">
+      <h5>Confirmação da palavra-passe</h5> <input id="confirm" autofocus="" name="confirm" placeholder="Introduza de novo a sua palavra-passe..." type="password"> </div>
+  </div>
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
   <script src="https://pingendo.com/assets/bootstrap/bootstrap-4.0.0-alpha.6.min.js"></script>
