--- a/registo_form.php.html
+++ b/registo_form.php.html
@@ -77,11 +77,11 @@
   <div class="col-md-12">
     <h3 class="py-5" contenteditable="true">Palavra-Passe<br></h3>
   </div>
-  <div class="row">
+  <div class="row py-5">
     <div class="col-md-12">
       <h5>Palavra-passe</h5> <input id="password" autofocus="" name="password" placeholder="Introduza a sua palavra-passe..." type="password"> </div>
   </div>
-  <div class="row">
+  <div class="row py-5">
     <div class="col-md-12">
       <h5>Confirmação da palavra-passe</h5> <input id="confirm" autofocus="" name="confirm" placeholder="Introduza de novo a sua palavra-passe..." type="password"> </div>
   </div>
