--- a/registo_form.php.html
+++ b/registo_form.php.html
@@ -69,13 +69,12 @@
       <h5>Telefone</h5> <input id="telefone" autofocus="" name="telefone" placeholder="Introduza um nº de telefone..." min="100000000" max="999999999" type="number"> </div>
   </div>
   <div class="row">
-    <div class="col-md-6 py-5">
+    <div class="col-md-12 py-5">
       <h5>Email</h5> <input id="email" autofocus="" name="email" placeholder="Escreva o seu endereço de email..." type="email"> </div>
-    <div class="col-md-6"></div>
   </div>
   <div class="row"> </div>
   <div class="col-md-12">
-    <h3 class="py-5" contenteditable="true">Palavra-Passe<br></h3>
+    <h3 class="" contenteditable="true">Palavra-Passe<br></h3>
   </div>
   <div class="row py-5">
     <div class="col-md-12">
