--- a/registo_form.php.html
+++ b/registo_form.php.html
@@ -76,9 +76,11 @@
   <div class="col-md-12">
     <h3 class="" contenteditable="true">Palavra-Passe<br></h3>
   </div>
-  <div class="row py-5">
-    <div class="col-md-12">
-      <h5>Palavra-passe</h5> <input id="password" autofocus="" name="password" placeholder="Introduza a sua palavra-passe..." type="password"> </div>
+  <div class="password">
+    <div class="row py-5">
+      <div class="col-md-12">
+        <h5>Palavra-passe</h5> <input id="password" autofocus="" name="password" placeholder="Introduza a sua palavra-passe..." type="password"> </div>
+    </div>
   </div>
   <div class="row py-5">
     <div class="col-md-12">
